[gd_scene load_steps=16 format=3 uid="uid://dp5dwvmwfai6w"]

[ext_resource type="Script" path="res://Scripts/Menu/menuTienda.gd" id="1_5yv6k"]
[ext_resource type="Texture2D" uid="uid://upvab1bywdjp" path="res://Assets/Menu/imagen_menumazo.jpg" id="2_6vx57"]
[ext_resource type="Texture2D" uid="uid://yq0jvol8adc8" path="res://Assets/Menu/icono_casa.png" id="3_ckl1o"]
[ext_resource type="Texture2D" uid="uid://bk2fgil33ud6k" path="res://Assets/Menu/tienda_titulo.png" id="3_ct718"]
[ext_resource type="LabelSettings" uid="uid://bo2lym2kql22f" path="res://fonts/StoreLabel.tres" id="4_4cs83"]
[ext_resource type="Texture2D" uid="uid://bjv5qi74g3l3d" path="res://Assets/Sprites/Cards/Front.png" id="5_1dslh"]
[ext_resource type="Texture2D" uid="uid://douah5qqg7v3r" path="res://Assets/Menu/precio.png" id="6_10h88"]
[ext_resource type="Texture2D" uid="uid://blpc1m5b4m0ny" path="res://Assets/Sprites/Cards/Speciality/Specialization.png" id="6_eq2y8"]
[ext_resource type="Texture2D" uid="uid://cy4tbbh0bynqb" path="res://Assets/Menu/precio_apretado.png" id="7_6beot"]
[ext_resource type="Texture2D" uid="uid://bkdvsibx57k2v" path="res://Assets/Menu/Vendido.png" id="7_rnxyq"]
[ext_resource type="Texture2D" uid="uid://caxs6d5i7csf7" path="res://Assets/Menu/AdolfoCoins.png" id="8_ya8bg"]
[ext_resource type="Texture2D" uid="uid://cnlwxkcv30unq" path="res://Assets/Sprites/Consumibles/Back.png" id="10_tmi4t"]
[ext_resource type="Texture2D" uid="uid://dw8iiwsaw30hm" path="res://Assets/Sprites/Consumibles/Gemas_bajo.png" id="11_1tgnh"]
[ext_resource type="Texture2D" uid="uid://clcrglo7233me" path="res://Assets/Sprites/Consumibles/Gemas_medio.png" id="12_qfx8f"]
[ext_resource type="Texture2D" uid="uid://b1oi8lib64kxp" path="res://Assets/Sprites/Consumibles/Gemas_alto.png" id="13_6na6g"]

[node name="HorizontalContainer" type="BoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5yv6k")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_6vx57")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 2
offset_top = 4.0
offset_right = 1152.0
offset_bottom = 666.0
size_flags_vertical = 3
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="TextureRect/VBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_ct718")
stretch_mode = 5

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 450)
layout_mode = 2
size_flags_vertical = 3

[node name="BoxContainer" type="BoxContainer" parent="TextureRect/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 132
theme_override_constants/margin_top = 30

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
theme_override_constants/separation = 30

[node name="HBoxContainer" type="VBoxContainer" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="NombreMazo" type="Label" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Carta de la semana"
label_settings = ExtResource("4_4cs83")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect4" type="TextureRect" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(156, 240)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("5_1dslh")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer/TextureRect4"]
layout_mode = 0
offset_left = 17.0
offset_top = 44.0
offset_right = 139.0
offset_bottom = 116.0
texture = ExtResource("6_eq2y8")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer/TextureRect4"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("7_rnxyq")

[node name="MarginContainer2" type="MarginContainer" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TouchScreenButton" type="TouchScreenButton" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer/MarginContainer2"]
position = Vector2(-68, 0)
scale = Vector2(1.18627, 0.923077)
texture_normal = ExtResource("6_10h88")
texture_pressed = ExtResource("7_6beot")

[node name="TextureRect" type="TextureRect" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer/MarginContainer2/TouchScreenButton"]
offset_left = 55.6364
offset_top = 7.58332
offset_right = 94.6364
offset_bottom = 46.5833
texture = ExtResource("8_ya8bg")
expand_mode = 1

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer/MarginContainer2/TouchScreenButton"]
offset_left = 22.7603
offset_top = 8.66667
offset_right = 50.7603
offset_bottom = 43.6667
theme_override_font_sizes/font_size = 25
text = "25"

[node name="HBoxContainer2" type="VBoxContainer" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="NombreMazo" type="Label" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Selecci√≥n extra"
label_settings = ExtResource("4_4cs83")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect4" type="TextureRect" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(156, 240)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("10_tmi4t")
expand_mode = 1

[node name="MarginContainer2" type="MarginContainer" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TouchScreenButton" type="TouchScreenButton" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer2/MarginContainer2"]
position = Vector2(-68, 0)
scale = Vector2(1.18627, 0.923077)
texture_normal = ExtResource("6_10h88")
texture_pressed = ExtResource("7_6beot")

[node name="TextureRect" type="TextureRect" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer2/MarginContainer2/TouchScreenButton"]
offset_left = 55.6364
offset_top = 7.58332
offset_right = 94.6364
offset_bottom = 46.5833
texture = ExtResource("8_ya8bg")
expand_mode = 1

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer2/MarginContainer2/TouchScreenButton"]
offset_left = 22.7603
offset_top = 8.66667
offset_right = 50.7603
offset_bottom = 43.6667
theme_override_font_sizes/font_size = 25
text = "50"

[node name="HBoxContainer3" type="VBoxContainer" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="NombreMazo" type="Label" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "A-Coins"
label_settings = ExtResource("4_4cs83")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect4" type="TextureRect" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(160, 240)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("11_1tgnh")
expand_mode = 1

[node name="MarginContainer2" type="MarginContainer" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TouchScreenButton" type="TouchScreenButton" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer3/MarginContainer2"]
position = Vector2(-68, 0)
scale = Vector2(1.18627, 0.923077)
texture_normal = ExtResource("6_10h88")
texture_pressed = ExtResource("7_6beot")

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer3/MarginContainer2/TouchScreenButton"]
offset_left = 22.7603
offset_top = 8.66667
offset_right = 50.7603
offset_bottom = 43.6667
theme_override_font_sizes/font_size = 25
text = "$2.99"

[node name="HBoxContainer4" type="VBoxContainer" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="NombreMazo" type="Label" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "A-Coins"
label_settings = ExtResource("4_4cs83")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect4" type="TextureRect" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(156, 240)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("12_qfx8f")
expand_mode = 1

[node name="MarginContainer2" type="MarginContainer" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TouchScreenButton" type="TouchScreenButton" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer4/MarginContainer2"]
position = Vector2(-68, 0)
scale = Vector2(1.18627, 0.923077)
texture_normal = ExtResource("6_10h88")
texture_pressed = ExtResource("7_6beot")

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer4/MarginContainer2/TouchScreenButton"]
offset_left = 22.7603
offset_top = 8.66667
offset_right = 50.7603
offset_bottom = 43.6667
theme_override_font_sizes/font_size = 25
text = "$7.99"

[node name="HBoxContainer5" type="VBoxContainer" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="NombreMazo" type="Label" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "A-Coins"
label_settings = ExtResource("4_4cs83")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect4" type="TextureRect" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(156, 240)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("13_6na6g")
expand_mode = 1

[node name="MarginContainer2" type="MarginContainer" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TouchScreenButton" type="TouchScreenButton" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer5/MarginContainer2"]
position = Vector2(-68, 0)
scale = Vector2(1.18627, 0.923077)
texture_normal = ExtResource("6_10h88")
texture_pressed = ExtResource("7_6beot")

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer5/MarginContainer2/TouchScreenButton"]
offset_left = 13.4876
offset_top = 7.58334
offset_right = 90.4876
offset_bottom = 42.5834
theme_override_font_sizes/font_size = 25
text = "$14.99"

[node name="BotonAtras" type="TouchScreenButton" parent="TextureRect"]
position = Vector2(99, 48)
scale = Vector2(0.0754491, 0.0668316)
texture_normal = ExtResource("3_ckl1o")

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
layout_mode = 2
offset_left = 881.0
offset_top = 44.0
offset_right = 1051.0
offset_bottom = 110.0
color = Color(0.72549, 0.666667, 0.67451, 1)

[node name="TextureRect" type="TextureRect" parent="TextureRect/ColorRect"]
layout_mode = 2
offset_left = 5.0
offset_top = 5.0
offset_right = 62.0
offset_bottom = 62.0
texture = ExtResource("8_ya8bg")
expand_mode = 1

[node name="Label" type="Label" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 82.0
offset_top = 2.0
offset_right = 157.0
offset_bottom = 61.0
theme_override_font_sizes/font_size = 43
text = "250"

[connection signal="pressed" from="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer/MarginContainer2/TouchScreenButton" to="." method="_on_touch_screen_button_pressed" binds= [1]]
[connection signal="pressed" from="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer2/MarginContainer2/TouchScreenButton" to="." method="_on_touch_screen_button_pressed" binds= [2]]
[connection signal="pressed" from="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer3/MarginContainer2/TouchScreenButton" to="." method="_on_touch_screen_button_pressed" binds= [3]]
[connection signal="pressed" from="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer4/MarginContainer2/TouchScreenButton" to="." method="_on_touch_screen_button_pressed" binds= [4]]
[connection signal="pressed" from="TextureRect/VBoxContainer/ScrollContainer/BoxContainer/MarginContainer/HBoxContainer/HBoxContainer5/MarginContainer2/TouchScreenButton" to="." method="_on_touch_screen_button_pressed" binds= [5]]
[connection signal="pressed" from="TextureRect/BotonAtras" to="." method="_on_boton_atras_pressed"]
